force-app/main/default/objects/Home_Office_Message__c/Home_Office_Message__c.object-meta.xml
<CustomObject>
    <label>Home Office Message</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Home Office Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>