force-app/main/default/objects/Home_Office_Message__c/fields/Audience_Scope__c.field-meta.xml
<CustomField>
    <fullName>Audience_Scope__c</fullName>
    <label>Audience Scope</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Business Units</fullName>
                <default>true</default>
                <label>All Business Units</label>
            </value>
            <value>
                <fullName>Business Unit</fullName>
            </value>
            <value>
                <fullName>Line</fullName>
            </value>
            <value>
                <fullName>District</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>