force-app/main/default/objects/Home_Office_Message__c/fields/Message_Body__c.field-meta.xml
<CustomField>
    <fullName>Message_Body__c</fullName>
    <label>Message Body</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>