force-app/main/default/objects/Home_Office_Message__c/fields/Published_On__c.field-meta.xml
<CustomField>
    <fullName>Published_On__c</fullName>
    <label>Published On</label>
    <type>DateTime</type>
</CustomField>