force-app/main/default/objects/Home_Office_Message__c/fields/Target_District_Territory_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_District_Territory_Id__c</fullName>
    <label>Target District Territory Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>